--- a/views/adminBlogs.ejs
+++ b/views/adminBlogs.ejs
@@ -191,8 +191,10 @@ select:focus {
                 <li><a href="/admin/manage-payments" <% if (activePage === 'manage-payments') { %> class="active" <% } %>>Manage Payments</a></li>
                 <li><a href="/admin/specialty/new" class="<%= activePage === 'specialties' ? 'active' : '' %>">Manage Specialties</a></li>
                 <li><a href="/admin/condition/new" class="<%= activePage === 'conditions' ? 'active' : '' %>">Manage Conditions</a></li>
+                <li><a href="/admin/news-releases" <% if (activePage === 'news-releases') { %> class="active" <% } %>>Manage News Releases</a></li>
+                <li><a href="/admin/news-logos" <% if (activePage === 'news-logos') { %> class="active" <% } %>>Manage News Logos</a></li> <!-- Added link for managing logos -->
                 <li><a href="/auth/logout" <% if (activePage === 'logout') { %> class="active" <% } %>>Logout</a></li>
-                
+
             </ul>
         </div>
 
@@ -220,6 +222,12 @@ select:focus {
                                     </select>
                                     <button type="submit">Update</button>
                                 </form>
+
+                                <form action="/admin/blogs/delete/<%= blog._id %>" method="POST" style="display:inline;">
+                                    <button type="submit" onclick="return confirm('Are you sure you want to delete this blog?')">Delete</button>
+                                  </form>
+                                  
+
                                 <a href="/admin/blogs/view/<%= blog._id %>" class="view-blog-link">View Details</a>
                             </div>
                             <hr>
