Updates on News page

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -88,6 +88,8 @@
                 <a href="/auth/signup/doctor">Doctor Sign Up</a>
             </div>
         </div>
+        <a href="/patient/news-releases">View News Releases</a>
+
 
         <div class="filter-container">
             <form action="/patient/doctors" method="get">
