--- a/views/patientNewsReleases.ejs
+++ b/views/patientNewsReleases.ejs
@@ -59,5 +59,8 @@
             <% }) %>
         </tbody>
     </table>
+
+    <a class="back-link" href="/patient/patient-index">Back to Patient Home</a>
+
 </body>
 </html>
